# messenger

./: .env.example  .gitignore  docker-compose.ci.yml  docker-compose.production.yml  docker-compose.yml
src/: Dockerfile  entrypoint.sh  manage.py  pyproject.toml  pytest.ini
src/api/: mixins.py  openapi.py  urls.py  utils.py
src/api/consumers/: base.py  chat.py  chats.py  user_chats.py
src/api/serializers/: __init__.py  attachment.py  attachmet.py  auth.py  chat.py  image.py  message.py  user.py
src/api/views/: __init__.py  attachment.py  auth.py  chat.py  message.py  mixins.py  user.py
src/core/: admin.py  constants.py  docs_constants.py
src/core/middlewares/: cookie_auth_middleware.py
src/core/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py  0003_alter_message_forwarded_by_and_more.py  0003_user_is_deleted_alter_message_author_and_more.py  0004_user_is_deleted_alter_chat_created_at_and_more.py  0005_alter_user_profile_picture.py  0005_attachment.py  0005_remove_message_picture.py  0006_alter_message_text.py  0006_alter_user_profile_picture.py  0006_attachment_type.py  0006_remove_message_picture.py  0007_attachment.py  0007_userchat_alter_chat_users.py  0008_attachment.py  0008_remove_attachment_user_attachment_created_by_and_more.py
src/core/models/: __init__.py  attachment.py  chat.py  message.py  mixins.py  user.py  user_chat.py
src/core/utils/: data_classes.py  enums.py  key_schemas.py
src/messenger/: asgi.py  settings.py  urls.py
src/tests/: conftest.py  factories.py
src/tests/attachments/: test_add_attachment.py  test_delete_attachment.py  test_forward_attachments.py  test_get_attachments.py
src/tests/factories/: attachment.py  chat.py  factories.py  message.py  mixins.py  user.py
src/tests/messages/: test_add_message.py  test_delete_message.py  test_forward_message.py  test_get_messages_with_pagination.py
src/tests/users/: test_find_user.py  test_get_users.py  test_get_users_with_pagination.py  test_upload_profile_picture.py
(+17 files in other folders)
