[tool.poetry]
name = "messenger"
version = "0.1.0"
description = ""
authors = ["TimurGizatullinStckrs <timurgizatullin@stackers.team>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
psycopg2-binary = "^2.9.5"
pillow = "^9.4.0"
djangorestframework = "^3.14.0"
pytest = "^7.2.2"
pytest-mock = "^3.10.0"
factory-boy = "^3.2.1"
pytest-django = "^4.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
