[tool.poetry]
name = "messenger"
version = "0.1.0"
description = ""
authors = ["TimurGizatullinStckrs <timurgizatullin@stackers.team>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
psycopg2-binary = "^2.9.5"
pillow = "^9.4.0"
djangorestframework = "^3.14.0"
channels = "3.0.5"
loguru = "^0.6.0"
drf-yasg = "^1.21.5"
channels-redis = "3.4.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.1.1"
flake8 = "^6.0.0"
pytest = "^7.2.2"
pytest-django = "^4.5.2"
factory-boy = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true